// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavContainer rendering render with Props 1`] = `
<Uncontrolled(TabContainer)
  defaultActiveKey={0}
  id="basic-tabs-pf"
>
  <div
    className="dashboard"
  >
    <Nav
      bsClass="nav nav-tabs nav-tabs-pf"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <NavItem
        active={false}
        className="nav_item"
        disabled={false}
        eventKey={0}
        key="0"
        onClick={[Function]}
      >
        <Icon
          name="some-icon"
          size="2x"
          type="fa"
        />
        <p>
          some-name
        </p>
      </NavItem>
    </Nav>
    <TabContent
      animation={true}
      bsClass="tab"
      componentClass="div"
      mountOnEnter={false}
      unmountOnExit={false}
    >
      <TabPane
        bsClass="tab-pane"
        eventKey={0}
        key="0"
      >
        <bound fn />
      </TabPane>
    </TabContent>
  </div>
</Uncontrolled(TabContainer)>
`;

exports[`NavContainer rendering render without Props 1`] = `
<Uncontrolled(TabContainer)
  defaultActiveKey={0}
  id="basic-tabs-pf"
>
  <div
    className="dashboard"
  >
    <Nav
      bsClass="nav nav-tabs nav-tabs-pf"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    />
    <TabContent
      animation={true}
      bsClass="tab"
      componentClass="div"
      mountOnEnter={false}
      unmountOnExit={false}
    />
  </div>
</Uncontrolled(TabContainer)>
`;
